# weather

./: LICENSE  README.md  config.py  constants.py  pyproject.toml  requirements.txt  sample.env
.github/workflows/: run-test.yml
tests/: test_basic.py
weather/: .gitignore  __init__.py  cli.py
