[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["bloomg <greig.bloom@ipsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
click = "^8.1.7"


[tool.poetry.scripts]
weather = "weather.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
