[tool.poetry]
name = "weather"
version = "0.3.7"
description = ""
authors = ["bloomg <gbloom42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
click = "^8.1.7"
flake8-pyproject = "^1.2.3"
pytest = "^8.0.0"
setuptools = "^69.1.0"
python-dotenv = "^1.0.1"
importlib-metadata = {version = "^7.0.1", optional = true}


[tool.poetry.scripts]
weather = "weather.cli:cli"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.0"
flake8 = "^7.0.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 88
count = true
#exclude=.venv